[package]
name = "lwa_cargo_vacuum"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "utility"]
description = "Simple CLI tool for cleaning up old target folders"
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.5"
dpc-pariter = "0.5"
fs_extra = "1.3"
chrono = "0.4"