[package]
name = "lwa_cargo_vacuum"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Leinnan/lwa_cargo_vacuum"
homepage = "https://github.com/Leinnan/lwa_cargo_vacuum"
keywords = ["cli", "utility"]
description = "Simple CLI tool for cleaning up old target folders"
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
walkdir = "2.5"
dpc-pariter = "0.5"
fs_extra = "1.3"
chrono = "0.4.38"
anyhow = "1.0.86"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
unwrap_used = { level = "deny", priority = 10 }
expect_used = { level = "deny", priority = 11 }
